error messages addede

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
             <div class="row">
             <div class="col">
                 <div class="header_content d-flex flex-row align-items-center justify-content-start trans_400">
-                <a href="#">
-                    <div class="logo d-flex flex-row align-items-center justify-content-start"><%= image_tag "images/dot.png"%><div>Sport<span>fit</span></div></div>
+                <a >
+                    <div class="logo d-flex flex-row align-items-center justify-content-start"><%= image_tag "images/dot.png"%><div>Athlean<span>bodies</span></div></div>
                 </a>
                 <nav class="main_nav">
                     <ul class="d-flex flex-row align-items-center justify-content-start">
@@ -38,7 +38,7 @@
                 </nav>
                 <div class="phone d-flex flex-row align-items-center justify-content-start ml-auto">
                     <i class="fa fa-phone" aria-hidden="true"></i>
-                    <div>652-345 3222 11</div>
+                    <div>1 (604)842-6868</div>
                 </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
         </div>
         <div class="menu_phone d-flex flex-row align-items-center justify-content-start">
           <i class="fa fa-phone" aria-hidden="true"></i>
-            <span>652-345 3222 11</span>
+            <span>1 (604)842-6868</span>
         </div>
       </div>
       <%= yield %>
@@ -83,8 +83,8 @@
                       <div class="footer_container">
                           <div class="footer_content">
                               <div class="footer_logo">
-                                  <a href="#">
-                                      <div class="logo d-flex flex-row align-items-center justify-content-center"><%= image_tag "images/dot.png" %><div>Sport<span>fit</span></div></div>
+                                  <a >
+                                      <div class="logo d-flex flex-row align-items-center justify-content-center"><%= image_tag "images/dot.png" %><div>Athlean<span>bodies</span></div></div>
                                   </a>
                               </div>
                               <nav class="footer_nav">
@@ -95,12 +95,6 @@
                                       <li><%= link_to "Contact", contact_path%></li>
                                   </ul>
                               </nav>
-                              <div class="newsletter_container">
-                                  <form action="#" id="newsletter_form" class="newsletter_form">
-                                      <input type="text" class="newsletter_input" placeholder="Enter your email here" required="required">
-                                      <button class="newsletter_button">go</button>
-                                  </form>
-                              </div>
                               <div class="copyright d-flex flex-row align-items-start justify-content-sm-end justify-content-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
       Copyright &copy; All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
