--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -9,7 +9,6 @@
 					<div class="col">
 						<div class="home_content">
 							<div class="home_title">Contact</div>
-							<div class="home_subtitle">Pilates, Yoga, Fitness, Spinning & many more</div>
 						</div>
 					</div>
 				</div>
@@ -27,24 +26,20 @@
 				<div class="col-lg-4">
 					<div class="contact_content">
 						<div class="contact_logo">
-							<div class="logo d-flex flex-row align-items-center justify-content-start"><%= image_tag "images/dot.png"%><div>Sport<span>fit</span></div></div>
+							<div class="logo d-flex flex-row align-items-center justify-content-start"><%= image_tag "images/dot.png"%><div>Athean<span>bodies</span></div></div>
 						</div>
 						<div class="contact_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
+							<p></p>
 						</div>
 						<div class="contact_list">
 							<ul>
 								<li class="d-flex flex-row align-items-start justify-content-start">
-									<div><div>A:</div></div>
-									<div>1481 Creekside Lane Avila Beach, CA 931</div>
-								</li>
-								<li class="d-flex flex-row align-items-start justify-content-start">
 									<div><div>P:</div></div>
-									<div>+53 345 7953 32453</div>
+									<div>1 (604)842-6868</div>
 								</li>
 								<li class="d-flex flex-row align-items-start justify-content-start">
 									<div><div>M:</div></div>
-									<div>yourmail@gmail.com</div>
+									<div>pckathleanbodies@gmail.com</div>
 								</li>
 							</ul>
 						</div>
@@ -70,27 +65,6 @@
 					</div>
 				</div>
 
-			</div>
-			<div class="row google_map_row">
-				<div class="col">
-					
-					<!-- Contact Map -->
-
-					<div class="contact_map">
-
-						<!-- Google Map -->
-						
-						<div class="map">
-							<div id="google_map" class="google_map">
-								<div class="map_container">
-									<div id="map"></div>
-								</div>
-							</div>
-						</div>
-
-					</div>
-
-				</div>
 			</div>
 		</div>
 	</div>
