--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,5 +1,6 @@
 <h2 class="text-xs-center admin-videos-index-name">Blog videos</h2>
 <div class="container search-form">
+    <%= render 'error_msg'%>
     <div class="row">
         <div class="col-md-3">
         </div>
