--- a/app/views/courses/_edit_course_form.html.erb
+++ b/app/views/courses/_edit_course_form.html.erb
@@ -6,8 +6,9 @@
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
             <div class="card">
                 <h5 class="card-header">Edit course form</h5>
+                <%= render 'error_msg' %>
                 <div class="card-body">
-                    <%= form_for( @course, url: courses_path, method: 'put', class: "needs-validation", remote: true, :html => {:novalidate => 'novalidate'}) do |f| %>
+                    <%= form_for(@course, url: course_path, method: 'put', class: "needs-validation", remote: true, :html => {:novalidate => 'novalidate'}) do |f| %>
                         <div class="row">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
                                 <label for="validationCustom01">Course name</label>
