--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container courses-container">
     <h1>Courses</h1>
+    <%= render 'error_msg' %>
     <div class="row">
         <% if @courses.length > 0 %>
             <% @courses.each do |course| %>
