--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -21,3 +21,7 @@
 .title-row {
     margin-bottom: 10%;
 }
+
+.main_image_home {
+    background-image: url('WhatsApp Image 2019-02-23 at 11.26.46 (1).jpeg');
+}
