--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,7 +99,7 @@
       Copyright &copy; All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
                           </div>
-                          <div class="footer_image text-center"><%= image_tag "images/footer.png" %></div>
+                          <div class="footer_image text-center"></div>
                       </div>
                   </div>
               </div>
