--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,7 @@
 <!-- Home -->
 
 	<div class="home">
-		<div class="background_image" style="background-image:url(<%= asset_path 'contact.jpg'%>)"></div>
+		<div class="background_image main_image_home"></div>
 		<div class="overlay"></div>
 		<div class="home_container">
 			<div class="container">
