--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="background_image" style="background-image:url(<%= asset_path 'index.jpg' %>)"></div>
+		<div class="background_image main_image_home" ></div>
 		<div class="overlay"></div>
 		<div class="home_container">
 			<div class="container">
@@ -103,7 +103,7 @@
 	<!-- Testimonials -->
 
 	<div class="testimonials">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="<%= asset_path 'testimonials.jpg' %>" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="<%= asset_path 'WhatsApp Image 2019-02-23 at 11.56.10.jpeg' %>" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
@@ -165,19 +165,19 @@
 			<div class="owl-carousel owl-theme gallery_slider">
 				
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "images/gallery_3.jpg" %></div>
+				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.27.23.jpeg" %></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "images/gallery_4.jpg" %></div>
+				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.27.35.jpeg" %></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "images/gallery_5.jpg" %></div>
+				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.26.31.jpeg" %></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "images/gallery_1.jpg" %></div>
+				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.26.39.jpeg" %></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "images/gallery_2.jpg" %></div>
+				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.26.25.jpeg" %></div>
 
 			</div>
 		</div>
