configuring the production environment for the mailer

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -165,19 +165,19 @@
 			<div class="owl-carousel owl-theme gallery_slider">
 				
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.27.23.jpeg" %></div>
+				<div class="owl-item"><%= image_tag "images/WhatsApp Image 2019-02-23 at 11.27.23.jpeg" %></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.27.35.jpeg" %></div>
+				<div class="owl-item"><%= image_tag "images/WhatsApp Image 2019-02-23 at 11.27.35.jpeg" %></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.26.31.jpeg" %></div>
+				<div class="owl-item"><%= image_tag "images/WhatsApp Image 2019-02-23 at 11.26.31.jpeg" %></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.26.39.jpeg" %></div>
+				<div class="owl-item"><%= image_tag "images/WhatsApp Image 2019-02-23 at 11.26.39.jpeg" %></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><%= image_tag "WhatsApp Image 2019-02-23 at 11.26.25.jpeg" %></div>
+				<div class="owl-item"><%= image_tag "images/WhatsApp Image 2019-02-23 at 11.26.25.jpeg" %></div>
 
 			</div>
 		</div>
