configuring the production environment for the mailer

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -103,7 +103,7 @@
 	<!-- Testimonials -->
 
 	<div class="testimonials">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="<%= asset_path '../../assets/images/WhatsApp Image 2019-02-23 at 11.56.10.jpeg' %>" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="../../assets/images/WhatsApp Image 2019-02-23 at 11.56.10.jpeg" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
