--- a/app/views/when/index.html.erb
+++ b/app/views/when/index.html.erb
@@ -1,6 +1,6 @@
 <!-- Timetable -->
 <div class="timetable">
-    <div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="<%= asset_path 'timetable.jpg'%>" data-speed="0.8"></div>
+    <div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="<%= asset_path 'images/timetable.jpg'%>" data-speed="0.8"></div>
     <div class="tt_overlay"></div>
     <div class="container">
         <%= link_to 'Return', dashboard_path, class: "btn btn-md btn-primary"%>
