--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -80,9 +80,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
 										<% if day.hour > 12%>
-                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>:30-P.M</div>
 										<% else %>
-											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+											<div class="tt_class_time"><%= day.hour %>:30-A.M</div>
 										<% end %>
                                     </div>
                             <% end %>
@@ -102,9 +102,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
 										<% if day.hour > 12%>
-                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>:30-P.M</div>
 										<% else %>
-											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+											<div class="tt_class_time"><%= day.hour %>:30-A.M</div>
 										<% end %>
                                     </div>
                             <% end %>
@@ -126,9 +126,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
 										<% if day.hour > 12%>
-                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>:30-P.M</div>
 										<% else %>
-											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+											<div class="tt_class_time"><%= day.hour %>:30-A.M</div>
 										<% end %>
                                     </div>
                             <% end %>
@@ -148,9 +148,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
 										<% if day.hour > 12%>
-                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>:30-P.M</div>
 										<% else %>
-											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+											<div class="tt_class_time"><%= day.hour %>:30-A.M</div>
 										<% end %>
                                     </div>
                             <% end %>
@@ -170,9 +170,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
 										<% if day.hour > 12%>
-                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>:30-P.M</div>
 										<% else %>
-											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+											<div class="tt_class_time"><%= day.hour %>:30-A.M</div>
 										<% end %>
                                     </div>
                             <% end %>
