--- a/app/views/when/index.html.erb
+++ b/app/views/when/index.html.erb
@@ -25,9 +25,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
                                         <% if day.hour > 12%>
-                                            <div class="tt_class_time"><%= day.hour - 12%>-P.M</div>
+                                            <div class="tt_class_time"><%= day.hour - 12%>:30-P.M</div>
                                         <%else%>
-                                            <div class="tt_class_time"><%= day.hour%>-A.M</div>
+                                            <div class="tt_class_time"><%= day.hour%>:30-A.M</div>
                                         <% end %>
                                     </div>
                                 <% end %>
@@ -49,9 +49,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
                                         <% if day.hour > 12%>
-                                            <div class="tt_class_time"><%= day.hour - 12%>-P.M</div>
+                                            <div class="tt_class_time"><%= day.hour - 12%>:30-P.M</div>
                                         <%else%>
-                                            <div class="tt_class_time"><%= day.hour%>-A.M</div>
+                                            <div class="tt_class_time"><%= day.hour%>:30-A.M</div>
                                         <% end %>
                                     </div>
                                 <% end %>
@@ -75,9 +75,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
                                         <% if day.hour > 12%>
-                                            <div class="tt_class_time"><%= day.hour - 12%>-P.M</div>
+                                            <div class="tt_class_time"><%= day.hour - 12%>:30-P.M</div>
                                         <%else%>
-                                            <div class="tt_class_time"><%= day.hour%>-A.M</div>
+                                            <div class="tt_class_time"><%= day.hour%>:30-A.M</div>
                                         <% end %>
                                     </div>
                                 <% end %>
@@ -100,9 +100,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
                                         <% if day.hour > 12%>
-                                            <div class="tt_class_time"><%= day.hour - 12%>-P.M</div>
+                                            <div class="tt_class_time"><%= day.hour - 12%>:30-P.M</div>
                                         <%else%>
-                                            <div class="tt_class_time"><%= day.hour%>-A.M</div>
+                                            <div class="tt_class_time"><%= day.hour%>:30-A.M</div>
                                         <% end %>
                                     </div>
                                 <% end %>
@@ -124,9 +124,9 @@
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
                                         <% if day.hour > 12%>
-                                            <div class="tt_class_time"><%= day.hour - 12%>-P.M</div>
+                                            <div class="tt_class_time"><%= day.hour - 12%>:30-P.M</div>
                                         <%else%>
-                                            <div class="tt_class_time"><%= day.hour%>-A.M</div>
+                                            <div class="tt_class_time"><%= day.hour%>:30-A.M</div>
                                         <% end %>
                                     </div>
                                 <% end %>
